Added data exchange agreement specs
